WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
Bug 116602
[BlackBerry] Fix subframe target added to new requests
https://bugs.webkit.org/show_bug.cgi?id=116602
Summary
[BlackBerry] Fix subframe target added to new requests
Carlos Garcia Campos
Reported
2013-05-22 02:43:04 PDT
In some cases we might be adding TargetIsMainFrame to a subframe request causing an isMainFrame assert.
Attachments
Patch
(2.08 KB, patch)
2013-05-22 02:45 PDT
,
Carlos Garcia Campos
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2013-05-22 02:45:49 PDT
Created
attachment 202512
[details]
Patch
Rob Buis
Comment 2
2013-05-27 10:42:36 PDT
Comment on
attachment 202512
[details]
Patch Looks good.
WebKit Commit Bot
Comment 3
2013-05-27 11:03:47 PDT
Comment on
attachment 202512
[details]
Patch Clearing flags on attachment: 202512 Committed
r150766
: <
http://trac.webkit.org/changeset/150766
>
WebKit Commit Bot
Comment 4
2013-05-27 11:03:50 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug