[BlackBerry] Fix subframe target added to new requests https://bugs.webkit.org/show_bug.cgi?id=116602

Reviewed by Rob Buis.

In some cases we might be adding TargetIsMainFrame to a subframe
request causing an isMainFrame assert.

* WebCoreSupport/FrameLoaderClientBlackBerry.cpp:
(WebCore::FrameLoaderClientBlackBerry::dispatchWillSendRequest):
Check we are actually loading the main frame before setting
ResourceRequest::TargetIsMainFrame target.


Canonical link: https://commits.webkit.org/135133@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@150766 268f45cc-cd09-0410-ab3c-d52691b4dbfc